fix css mobile submenu alignment

--- a/wctrn23.scss
+++ b/wctrn23.scss
@@ -132,6 +132,10 @@ footer {
           }
         }
       }
+      .wp-block-navigation__submenu-container {
+        min-width: 100%!important;
+        padding: 0!important;
+      }
     }
   }
 }
